# geekfit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml  update-readme.yml
src/: App.tsx  config.rs  gui.rs  index.css  main.rs  main.tsx  models.rs  notifications.rs  scheduler.rs  storage.rs  theme.ts  tray.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ContributionGraph.tsx  FitnessCommitCard.tsx  KeyboardShortcutsDialog.tsx  LevelUpModal.tsx  Onboarding.tsx  PersonalRecordModal.tsx  PomodoroTimer.tsx  QuickLogDialog.tsx  ShareCard.tsx
src/components/Layout/: Sidebar.tsx
src/contexts/: ExerciseContext.tsx  LocaleContext.tsx  ThemeContext.tsx  UserContext.tsx  WellnessContext.tsx
src/data/: badges.ts
src/hooks/: useGlobalHotkey.ts  useKeyboardShortcuts.ts  usePomodoro.ts
src/i18n/: index.ts
src/pages/: Achievements.tsx  Dashboard.tsx  Exercises.tsx  History.tsx  Settings.tsx  WeeklyWrapUp.tsx  Wellness.tsx
src/themes/: index.ts
src/types/: index.ts
src/utils/: confetti.ts  records.ts  sounds.ts  xp.ts
