[package]
name = "geekfit"
version = "1.0.0"
description = "Gamified fitness tracker for programmers"
authors = ["GeekFit"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "geekfit"

[lib]
name = "geekfit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Main Tauri binary
[[bin]]
name = "geekfit"
path = "src/main.rs"

# CLI binary for terminal lovers
[[bin]]
name = "geekfit-cli"
path = "src/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
colored = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
